[automapping] Fix font colors [black on black wasn't very readable ;P ]

--- a/automapping/frontend/public-html/layout.css
+++ b/automapping/frontend/public-html/layout.css
@@ -62,30 +62,37 @@ body {
 	width: 100%;
 	position: relative;
 	background: #000000;
+	color: #fff;
 }
 .middle:after {
 	display: table;
 	clear: both;
 	content: '';
+	color: #fff;
 }
 .container {
 	width: 100%;
 	float: left;
 	overflow: hidden;
+	color: #fff;
 }
 .content {
 	padding: 0 0 0 0px;
+	color: #fff;
 }
 
 
 /* Left Sidebar
 -----------------------------------------------------------------------------*/
 .left-sidebar {
+    font-size: xx-large;
+	font-style: italic;
 	float: left;
 	width: 600px;
 	margin-left: -100%;
 	position: relative;
 	background: #000000;
+	color: #fff;
 }
 
 /* Right Sidebar
@@ -101,6 +108,7 @@ body {
       /* background-image: linear-gradient(to right, rgba(255,210,0,0.4), rgba(200, 160, 0, 0.1) 11%, rgba(0,0,0,0) 35%, rgba(200, 160, 0, 0.1) 65%);
       box-shadow: inset 0 0 75px rgba(255,210,0,0.3), inset 0 0 20px rgba(255,210,0,0.4), inset 0 0 30px rgba(220,120,0,0.8);
 	/* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); */
+	color: #fff;
 }
 
 
@@ -115,5 +123,6 @@ body {
     margin-top: -180px;
     margin-left: auto;
     margin-right: 25px;
+	color: #fff;
 	/* background: #BFF08E; */
 }
